--- a/src/app/my-projects/my-projects.component.html
+++ b/src/app/my-projects/my-projects.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="projects">
     <div class="headlineContainer">
         <div class="blueLineShortContainer">
             <div class="blueLineShort"></div>
@@ -10,24 +10,29 @@
     </div>
 
     <div class="portfolioDescription">
-        This is a sample of my Work.
+        This is a sample of my previous projects.
     </div>
 
     <div class="projectsContainer">
         
-            <div [ngClass]="{'justify-between': home.isDesktop}" class="project" *ngFor="let project of projects; let i = index">
-                <div [ngClass]="{'wrapActive-40': home.isDesktop}" class="projectImgContainer">
+            <div class="project" *ngFor="let project of projects; let i = index" [ngClass]="{'justify-between': home.isDesktop}">
+                <div class="projectImgContainer" [ngClass]="{'wrapActive-40': home.isDesktop}">
                     <img src="{{ project.path }}" alt="">
                 </div>
                 
-                <div [ngClass]="{'alignItemsStart': home.isDesktop, 'wrapActive-60': home.isDesktop}" class="projectInfosContainer">
+                <div class="projectInfosContainer"
+                 [ngClass]="{'alignItemsStart': home.isDesktop, 'wrapActive-60': home.isDesktop}">
                     <div class="projectName">{{ project.project }}</div>
                     <div class="projectSkill">{{ project.skills }}</div>
                     <div [ngClass]="{'text-align-left': home.isDesktop}" class="projectInfo">{{ project.info }}</div>
         
                     <div class="btnContainer">
-                        <div class="liveBtn btn">Live test</div>
-                        <div class="gitBtn btn">Git Hub</div>
+                        <a href="{{ project.liveTestPath }}" target="_blank" rel="noopener noreferrer">
+                            <div class="liveBtn btn">Live test</div>
+                        </a>
+                        <a href="{{ project.gitPath }}" target="_blank" rel="noopener noreferrer">
+                            <div class="gitBtn btn">Git Hub</div>
+                        </a>
                     </div>
 
                 </div>
