--- a/src/app/my-projects/my-projects.component.scss
+++ b/src/app/my-projects/my-projects.component.scss
@@ -120,12 +120,20 @@ section {
                         border: 2px solid $secondColor;
                         text-align: center;
                         min-width: max-content;
+
+                        &:hover{
+                            border: 2px solid $mainColor;
+                        }
                     }
 
                     .liveBtn {
                         background-color: $mainColor;
                         text-align: center;
                         min-width: max-content;
+
+                        &:hover{
+                            background-color: $secondColor;
+                        }
                     }
                 }
             }
