--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -66,6 +66,7 @@ $secondColor: rgb(0, 190, 232);
             display: flex;
             justify-content: center;
             align-items: center;
+            max-width: 690px;
 
 
             .icons{
