--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <section class="header">
-    <div class="logo">Jacob</div>
+    <div class="logo">Ja<span class="c">c</span>o<span class="b">b</span></div>
 
     <div *ngIf="home.isDesktop || home.isTablet" class="navbar">
-        <a href="">About me</a>
-        <a href="">Skills</a>
-        <a href="">Portfolio</a>
+        <a href="#aboutMe">About me</a>
+        <a href="#mySkills">Skills</a>
+        <a href="#projects">Portfolio</a>
     </div>
 
     <div #$nav id="nav" class="navigation">
         <div class="navigation__inner">
           <!--  Hamburger-Menu-Content   -->
-          <a href="">About me</a>
-          <a href="">Skills</a>
-          <a href="">Portfolio</a>
+          <a href="#aboutMe">About me</a>
+          <a href="#mySkills">Skills</a>
+          <a href="#projects">Portfolio</a>
         </div>
     </div>
 
