--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 <section id="mySkills" class="skillsSection">
 
-    <div  class="skillsContainer">
+    <div class="skillsContainer" [ngClass]="{'justify-center': home.isMobile}">
         
     
     
