--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,9 +10,9 @@
     <div #$nav id="nav" class="navigation">
         <div class="navigation__inner">
           <!--  Hamburger-Menu-Content   -->
-          <a href="#aboutMe">About me</a>
-          <a href="#mySkills">Skills</a>
-          <a href="#projects">Portfolio</a>
+          <a href="#aboutMe" (click)="this.animmateNavIcon()">About me</a>
+          <a href="#mySkills" (click)="this.animmateNavIcon()">Skills</a>
+          <a href="#projects" (click)="this.animmateNavIcon()">Portfolio</a>
         </div>
     </div>
 
