--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -25,6 +25,7 @@ $secondColor: rgb(0, 190, 232);
     .personalImageContainer{
         position: relative;
         width: 100vw;
+        max-width: 100%;
         height: 60vh;
         max-width: 100%;
         z-index: 80;
@@ -36,6 +37,8 @@ $secondColor: rgb(0, 190, 232);
             max-width: 550px;
             position: absolute;
             top: 0;
+            left: 0;
+            object-fit: contain;
         }
 
         .vector{
