--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,5 @@
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-my-projects></app-my-projects>
+<app-contact></app-contact>
+<app-footer></app-footer>
