--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -18,6 +18,7 @@ $secondColor: rgb(0, 190, 232);
         display: flex;
         flex-wrap: wrap-reverse;
         align-items: center;
+        justify-content: space-between;
         width: 100%;
 
 
