--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
 <app-my-skills></app-my-skills>
 <app-my-projects></app-my-projects>
 <app-contact></app-contact>
+<app-legal-notice></app-legal-notice>
 <app-footer></app-footer>
